fix: code review issues Added spacing variables from carbon, added more padding to the social links section, deleted data html propertie and create a new function to create the sections of the component.

--- a/components/footer/index.scss
+++ b/components/footer/index.scss
@@ -18,16 +18,16 @@ footer {
 
 .secondary-footer {
   display: block;
-  padding: 2rem 0 4.5rem;
+  padding: $spacing-07 0 calc($spacing-10 + 0.5rem);
 }
 
 .main-footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 2rem 0;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
+  padding: $spacing-07 0;
+  padding-right: $spacing-08;
+  padding-left: $spacing-08;
   background-color: #f2f4f8;
 }
 
@@ -50,14 +50,11 @@ footer {
 }
 
 .footer-section-title {
+  @include carbon--type-style("productive-heading-02");
+
   display: block;
-  margin-bottom: 1.5rem;
+  margin-bottom: $spacing-06;
   color: #697077;
-  font-weight: 600;
-  font-size: 0.875rem;
-  font-family: "IBM Plex Sans SemiBold", sans-serif;
-  line-height: 1.25;
-  letter-spacing: 0.16px;
 }
 
 li {
@@ -69,14 +66,12 @@ ul {
 }
 
 .link {
+  @include carbon--type-style("body-long-01");
+
   display: inline-block;
   width: 100%;
-  padding-bottom: 0.5rem;
+  padding-bottom: $spacing-03;
   color: #697077;
-  font-weight: 400;
-  font-size: 0.75rem;
-  line-height: 1.3333;
-  letter-spacing: 0.32px;
   text-decoration: none;
 }
 
@@ -88,19 +83,23 @@ a:hover {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: auto 1fr;
-  grid-gap: 0 1rem;
-  gap: 0 1rem;
+  grid-gap: $spacing-03 $spacing-05;
+  gap: $spacing-03 $spacing-05;
   justify-items: start;
 
   svg {
     color: #697077;
   }
+
+  a {
+    padding-bottom: $spacing-03;
+  }
 }
 
 .section {
   flex: 1;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: $spacing-05;
+  padding-left: $spacing-05;
   font: inherit;
   font-size: inherit;
   font-size: 100%;
@@ -109,26 +108,26 @@ a:hover {
 .page-footer-secondary {
   display: flex;
   justify-content: space-between;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
+  padding-right: $spacing-08;
+  padding-left: $spacing-08;
   background-color: #fff;
 
   .caption {
     color: #343a3f;
     font-weight: 400;
-    font-size: 0.75rem;
+    font-size: $spacing-04;
     font-family: "IBM Plex Sans", sans-serif;
     line-height: 1.3333;
     letter-spacing: 0.32px;
   }
 
   .page-footer-secondary-links {
-    padding-left: 2.5rem;
+    padding-left: $spacing-08;
   }
 
   a {
-    margin-bottom: 1rem;
-    margin-left: 2rem;
+    margin-bottom: $spacing-05;
+    margin-left: $spacing-07;
     color: #697077;
     font-family: carbon--font-family("sans");
     text-decoration: none;
@@ -144,7 +143,7 @@ a:hover {
     flex: 500px;
     height: 32px;
     margin-bottom: 5%;
-    padding-left: 0.5rem;
+    padding-left: $spacing-03;
   }
 
   .page-footer-secondary-links {
@@ -152,7 +151,7 @@ a:hover {
     flex-basis: 0;
     flex-flow: column wrap;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    margin-bottom: $spacing-05;
     padding-left: 0;
   }
 
